<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/kvarterskrog">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sparrmans Kvarterskrog"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="italic"



    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Förrätt"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textColor="@color/purple_200"

        ></TextView>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="100dp"
        android:src="@drawable/foratter"></ImageView>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foratt1"
        android:layout_margin="15dp"
        android:textColor="@color/teal_200"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foratt1_beskrivning"
            android:textSize="10dp"
            android:textColor="@color/teal_200"
            android:layout_marginTop="25dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/foratt2"
            android:textColor="@color/teal_200"></TextView>

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foratt2_beskrivning"
            android:textSize="10dp"
            android:textColor="@color/teal_200"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foratt3"
            android:layout_margin="15dp"
            android:textColor="@color/teal_200"></TextView>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foratt3_beskrivning"
            android:textSize="10dp"
            android:textColor="@color/teal_200"
            ></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="Huvudrätt"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/purple_200"></TextView>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/huvudratt"
        android:layout_marginLeft="70dp"
        ></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huvudratt1"
            android:layout_margin="15dp"
            android:textColor="@color/teal_200"></TextView>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huvudratt1_beskrivning"
            android:textSize="10dp"
            android:textColor="@color/teal_200"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huvudratt2"
            android:layout_margin="15dp"
            android:textColor="@color/teal_200"></TextView>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huvudratt2_beskrivning"
            android:textSize="10dp"
            android:textColor="@color/teal_200"></TextView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huvudratt3"
            android:layout_margin="15dp"
            android:textColor="@color/teal_200"></TextView>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huvudratt3_beskrivning"
            android:textSize="10dp"
            android:textColor="@color/teal_200"></TextView>

    </LinearLayout>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Efterätt"
         android:textSize="25dp"
         android:layout_gravity="center"
         android:layout_margin="20dp"
         android:textStyle="bold"
         android:textColor="@color/purple_200"
         ></TextView>

     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginLeft="100dp"
         android:src="@drawable/efteratter"></ImageView>


 </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/efteratt1"
            android:layout_margin="15dp"
            android:textColor="@color/teal_200"></TextView>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/efteratt1_beskrivning"
            android:textSize="10dp"
            android:textColor="@color/teal_200"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/efteratt2"
            android:layout_margin="15dp"
            android:textColor="@color/teal_200"></TextView>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/efteratt2_beskrivning"
            android:textSize="10dp"
            android:textColor="@color/teal_200"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/efteratt3"
            android:layout_margin="15dp"
            android:textColor="@color/teal_200"></TextView>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/efteratt3_beskrivning"
            android:textSize="10dp"
            android:textColor="@color/teal_200"></TextView>

    </LinearLayout>


</LinearLayout>
